adding repeat gsoc student and GWM contributor pbanaszkiewicz

--- a/osuosl-planet.ini
+++ b/osuosl-planet.ini
@@ -36,6 +36,9 @@ new_feed_items = 4
 #  favicon.ico
 #  robots.txt
 
+[http://piotr.banaszkiewicz.org/atom.xml]
+name = Piotr Banaszkiewicz
+
 [http://www.lancealbertson.com/category/opensource/feed/]
 name = Lance Albertson
 
