adding GSoC '13 student Pranjal Mittal

--- a/osuosl-planet.ini
+++ b/osuosl-planet.ini
@@ -36,6 +36,9 @@ new_feed_items = 4
 #  favicon.ico
 #  robots.txt
 
+[http://www.pranjalmittal.in/feeds/posts/default]
+name = Pranjal Mittal
+
 [http://piotr.banaszkiewicz.org/atom.xml]
 name = Piotr Banaszkiewicz
 
